<resources>
    <string name="app_name">De BHV\'er</string>
    <string name="company_name">De Haagse Hogeschool</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hint_firstandlastname">First and last name</string>
    <string name="hint_Telephonenumber">Phone number</string>
    <string name="hint_email">E-mail address</string>
    <string name="hint_ERO">ERO Functions</string>
    <string name="hint_rights">Admin rights</string>
    <string name="hint_branch">Branch</string>
    <string name="hint_password">Password</string>
    <string name="add_user">Add user</string>
    <string name="update_user">Update user</string>

    <string name="action_settings">Options</string>
    <string name="action_logout">Log out</string>
    <string name="home">Report Incident</string>
    <string name="courses">Courses</string>
    <string name="devices">Equipment</string>
    <string name="incidents">Incidents</string>
    <string name="manuals">Manual</string>

    <string name="user_right_none">None</string>
    <string name="user_right_admin">Admin</string>
    <string name="user_right_equipment">Only equipment</string>
    <string name="user_right_training">Only courses</string>
    <string name="user_right_equipment_training">Equipment and courses</string>

    <string name="user_ERO_function_fire">Extinguish fire</string>
    <string name="user_ERO_function_first_aid">First Aid</string>
    <string name="user_ERO_function_AED">AED</string>
    <string name="user_ERO_function_none">None</string>

    <string name="equipment_type_fire">Fire</string>
    <string name="equipment_type_medical">Medical</string>
    <string name="equipment_type_personnel_equipment">Staff equipment</string>

    <string name="incident_type_fire">Fire</string>
    <string name="incident_type_medical">Medical</string>

    <string name="training_type_basis">Basic</string>
    <string name="training_type_repeat">Repeat</string>

    <string name="error_empty_name">Name cannot be empty.</string>
    <string name="error_empty_location">Location cannot be empty.</string>
    <string name="error_empty_email">Email cannot be empty.</string>
    <string name="error_empty_telephone">Telephone cannot be empty.</string>
    <string name="error_empty_branch">Branch cannot be empty.</string>
    <string name="error_empty_date_of_purchase">Date of purchase cannot be empty.</string>
    <string name="error_empty_expiration_date">Expiration date cannot be empty.</string>
    <string name="error_empty_adminrights">Adminrights cannot be empty.</string>
    <string name="error_empty_erofunctions">No ERO functions selected. Are you sure you want to create this user without an ERO function?</string>
    <string name="error_empty_password">Password can not be empty</string>
    <string name="error_empty_city">City can not be empty</string>
    <string name="error_empty_address">Address can not be empty</string>
    <string name="error_empty_postal_code">Postcode can not be empty</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="warning">Warning</string>
    <string name="warning_logout">Are you sure you want to log out?</string>
    <string name="warning_exit_without_save">Are you sure you want to go back without saving?</string>

    <string name="branch_name">Name branch</string>
    <string name="branch_city">City</string>
    <string name="branch_postal_code">zip code</string>
    <string name="branch_address">Address</string>
    <string name="incident_description">Description</string>
    <string name="incident_location">Location</string>

    <string name="hint_equipment_name">Name</string>
    <string name="hint_equipment_description">Description</string>
    <string name="hint_equipment_location">Location description</string>
    <string name="hint_equipment_type">Equipment type</string>
    <string name="hint_equipment_date_of_purchase">Date of purchase</string>
    <string name="hint_equipment_expiration_date">Expiration date</string>
    <string name="hint_equipment_date_of_inspection">Last date of inspection</string>
    <string name="hint_equipment_image">Equipment picture</string>
    <string name="hint_equipment_branch">Select branch</string>

    <string name="title_activity_home_user">Report incident</string>
    <string name="title_activity_admin_equipment_add">Add equipment</string>
    <string name="title_activity_admin_equipment_edit">Edit equipment</string>
    <string name="title_activity_admin_equipment_default">Manage Equipment</string>
    <string name="title_activity_admin_branch_default">Manage Branch</string>
    <string name="title_activity_admin_branch_add">Add branch</string>
    <string name="title_activity_admin_branch_edit">Edit branch </string>
    <string name="title_activity_admin_user_add">Add user</string>
    <string name="title_activity_admin_user_edit">Edit user</string>
    <string name="title_activity_admin_user_default">Manage User</string>
    <string name="title_activity_admin_training_default">Manage Courses</string>
    <string name="title_activity_admin_training_edit">Edit course </string>
    <string name="title_activity_admin_training_add">Add course </string>
    <string name="title_activity_admin_user_filter">Filters user</string>
    <string name="title_activity_user_equipment_default">Equipment</string>
    <string name="title_activity_user_equipment_details">Equipment overview</string>
    <string name="title_activity_incident_opener">Receive incident</string>
    <string name="title_activity_user_incident_details">Incident details</string>
    <string name="title_activity_user_incident_default">Incidents</string>
    <string name="title_activity_user_training_default">Courses</string>

    <string name="title_activity_emergency_manuals">Possible emergencies</string>
    <string name="title_activity_emergency_single_details">Emergency manual</string>

    <string name="filter_apply_button">Apply filter</string>

    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="update_branch">Update branch</string>
    <string name="emergency_type">Emergency type</string>

    <string name="save_succes">Successfully saved</string>
    <string name="save_error">Error: nothing has been saved</string>
    <string name="delete_succes">Successfully deleted</string>
    <string name="delete_error">Error: nothing has been deleted</string>

    <string name="equipment_save_succes">Equipment successfully saved</string>
    <string name="equipment_save_error">Error: equipment not saved</string>
    <string name="equipment_delete_succes">Equipment successfully deleted</string>
    <string name="equipment_delete_error">Error: equipment not deleted</string>
    <string name="branch_save_succes">Branch successfully saved</string>
    <string name="branch_save_error">Error: branch not saved</string>
    <string name="branch_delete_succes">Branch successfully deleted</string>
    <string name="branch_delete_error">Error: branch not deleted</string>
    <string name="user_save_succes">User successfully saved</string>
    <string name="user_save_error">Error: user not saved</string>
    <string name="user_delete_succes">User successfully deleted</string>
    <string name="user_delete_error">Error: user not deleted</string>
    <string name="error_loading_picture">Error with retrieving the picture</string>

    <string name="equipment_show_name">Name: </string>
    <string name="equipment_show_description">Description: </string>
    <string name="equipment_show_location">Location: </string>
    <string name="equipment_show_type">Type: </string>
    <string name="equipment_show_purchase">Date of purchase: </string>
    <string name="equipment_show_expire">Expiration date: </string>
    <string name="equipment_show_inspection">Date of inspection: </string>
    <string name="equipment_show_image">Picture: </string>

    <string name="incident_list_explaination">Type @ location- time/date</string>

    <string name="heart_attack">Heart attack</string>
    <string name="suffocation">Suffocation</string>
    <string name="evacuation_plan">Evacuation plan</string>

    <string name="step">Step</string>

    <string name="ha_step1_details">Check the victim for consciousness</string>
    <string name="ha_step2_details">Call for help</string>
    <string name="ha_step3_details">When the victim does not breath, immediately call 911.</string>
    <string name="ha_step4_details">Let someone get an AED as fast as possible</string>
    <string name="ha_step5_details">Give thirty chest compressions</string>
    <string name="ha_step6_details">After every thirty chest compressions, give the victim two rescue breaths</string>
    <string name="ha_step7_details">If the AED is at sight, use it immediately</string>
    <string name="ha_step8_details">Keep on performing CPR until professional rescuers tell you to stop</string>

    <string name="suffocation_step1_details">immediately give the victim five blows between the shoulder blades. Check after every blow if the problem is solved.</string>
    <string name="suffocation_step2_details">If blows on the back do not help, then perform five abdominal thrusts</string>
    <string name="suffocation_step3_details">Give alternating five blows between the shoulder blades and five abdominal thrusts</string>
    <string name="suffocation_step4_details">Call 911 if the victim loses consciousness</string>
    <string name="suffocation_step5_details">Start CPR if the victim is unconscious and not breathing normally.</string>
    <string name="suffocation_step6_details">If the victim is a child, always go to see a doctor afterwards.</string>

    <string name="select_floor">Select a floor of which you want to see the evacuation plan of:</string>
    <string name="warning_delete_equipment">Are you sure you want to delete this equipment?</string>
    <string name="warning_delete_branch">Are you sure you want to delete this branch?</string>
    <string name="warning_delete_user">Are you sure you want to delete this user?</string>
    <string name="nothing">Nothing</string>
    <string name="hint_user_training_achieved">Achieved</string>
    <string name="hint_user_training_scheduled">Scheduled</string>
    <string name="hint_user_training_expired">Expired</string>
    <string name="hint_user_training_failed">Failed</string>
    <string name="hint_user_training_alternate"><i>Name - Date \n</i></string>
    <string name="hint_user_training_default"><i>Name - Obtained - Expires \n</i></string>
    <string name="Description">Description</string>

    <string name="modify">Modify</string>
    <string name="error_empty_description">Description can not be empty</string>
    <string name="Ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="error_empty_schedule_date">Schedule date cannot be empty</string>
    <string name="hint_training_name">Course name</string>
    <string name="hint_training_description">Course description</string>
    <string name="hint_training_type">Course type</string>
    <string name="hint_training_schedule_date">Schedule date</string>
    <string name="hint_training_expiration_date">Expiration date</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="add_training">Add course</string>
    <string name="delete_training">Delete course</string>
    <string name="add_users_to_training">Add users to course</string>

</resources>

