<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_user">

        <item
            android:id="@+id/navigation_item_0"
            android:title="@string/home"
            android:icon="@drawable/ic_report_incident_18dp"/>
        <item
            android:id="@+id/navigation_item_1"
            android:title="@string/courses"
            android:icon="@drawable/ic_file_document_box_white_18dp"/>
        <item
            android:id="@+id/navigation_item_2"
            android:title="@string/devices"
            android:icon="@drawable/ic_fire_extinguisher_18dp"/>
        <item
            android:id="@+id/navigation_item_3"
            android:title="@string/incidents"
            android:icon="@drawable/ic_account_alert_white_18dp"
            />
        <item
            android:id="@+id/navigation_item_4"
            android:title="@string/manuals"
            android:icon="@drawable/ic_manual_18dp"/>
    </group>

    <group
        android:id="@+id/menu_group_admin">

    </group>
</menu>